feat(avail-request): manager can view available requests
- create route for the endpoint as /manager/requests
- create controller for the endpoint
- create service to retrieve the data from the database
- create test for the endpoint
- add some data to the requests seed
- add some field to the requests migration

[Delivers #167749965]
