# src/utils/validationSchema.js
@@ -1,13 +1,8 @@
 import Joi from '@hapi/joi';
 
-const name = Joi.string().trim().required().regex(/^[A-Za-z]+$/)
-  .min(3);
-
-const firstName = name
-  .label('firstname is required, must be alphabets only and have at least 3 characters');
-
-const lastName = name
-  .label('lastname is required, must be alphabets only and have at least 3 characters');
+const name = Joi.string().trim().min(3).regex(/^[A-Za-z]+$/)
+  .required();
+const otherUserFields = Joi.string().trim().allow(null, '');
 
 const email = Joi.string().trim().lowercase().email()
   .required()
@@ -20,23 +15,50 @@ const password = Joi.string().required().regex(/^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(
 const required = Joi.string().trim().required();
 const str = Joi.string().allow('');
 const date = Joi.date().iso();
+const reason = str.label('reason must be a string');
+const accommodation = str.label('accommodation must be a string');
 
 export default {
   signup: Joi.object().keys({
-    firstName,
-    lastName,
+    firstName: name
+      .label('firstName is required, must be alphabets only and have at least 3 characters'),
+    lastName: name
+      .label('lastName is required, must be alphabets only and have at least 3 characters'),
     email,
-    password
+    password: Joi.string().required().regex(/^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.{8,})/)
+      .label('password is required, must be at least 8 characters and must'
+      + ' contain at least a number, one lowercase and one uppercase alphabet')
   }),
   signin: Joi.object().keys({
     email,
     password: Joi.string().required().label('password is required')
   }),
+  emailParam: Joi.object().keys({
+    email,
+  }),
+  profile: Joi.object().keys({
+    firstName: name
+      .label('firstName is required, must be alphabets only and have at least 3 characters'),
+    lastName: name
+      .label('lastName is required, must be alphabets only and have at least 3 characters'),
+    birthDate: Joi.date().iso().allow(null, '')
+      .label('date, must be in this format YYYY-MM-DD'),
+    preferredLanguage: otherUserFields
+      .label('preffered language can be English, French,..etc'),
+    gender: Joi.any().trim().allow(null, '')
+      .label('gender can be either Male, Female or Other'),
+    address: otherUserFields.label('address is required'),
+    department: otherUserFields.label('please specify your current department'),
+    lineManager: otherUserFields.label('please specify your current line manager'),
+    role: otherUserFields.label('please specify your roles'),
+    phoneNumber: otherUserFields.regex(/^[0-9]{10,14}$/)
+      .label('please only enter a valid phone number'),
+  }),
   request: Joi.object().keys({
     origin: required.label('origin is required'),
     destination: required.label('destination is required'),
-    type: required.valid('one-way', 'return')
-      .label('type is required and can either be "one-way" or "return"'),
+    type: required.valid('one-way', 'return', 'multi-city')
+      .label('type is required and can only be "one-way", "return" or "multi-city"'),
     departureDate: date.required()
       .label('departureDate is required and must follow this format: YYYY-MM-DD'),
     returnDate: date.when('type', {
@@ -44,9 +66,16 @@ export default {
     })
       .concat(date.when('type', { is: 'one-way', then: date.allow('') }))
       .label('returnDate is required for a "return" trip,'
-      + ' it cannot come before departureDate'
-      + ' and must follow this format: YYYY-MM-DD'),
-    reason: str.label('reason must be a string'),
-    accommodation: str.label('accommodation must be a string')
-  })
+        + ' it cannot come before departureDate'
+        + ' and must follow this format: YYYY-MM-DD'),
+    reason,
+    accommodation
+  }),
+  childRequest: Joi.array().items(Joi.object().keys({
+    destination: required.label('destination is required in childRequests'),
+    departureDate: date.required()
+      .label('departureDate is required in childRequests and must follow this format: YYYY-MM-DD'),
+    reason,
+    accommodation
+  }))
 };
